changed name 'vue-form' to 'vue-form-state' because its taken'

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-form",
+  "name": "vue-form-state",
   "version": "0.1.0",
   "description": "A VueJs plugin to simplify ajax form handling.",
   "main": "dist/vue-form.js",
